Bridge lib.c compatibility done, commands are now working